--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.39.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
@@ -93,7 +94,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.2",
-    "prisma": "^5.8.1",
+    "prisma": "^5.22.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
