--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/module-alias": "^2.0.4",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.14",
