--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:seed:orders": "ts-node prisma/seed-orders-customers.ts",
     "prisma:clear": "ts-node prisma/clear.ts",
     "prisma:reset": "npm run prisma:clear && npm run prisma:seed",
     "docker:up": "docker-compose up -d",
