--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "commonjs",
-    "lib": ["ES2021"],
+    "lib": [
+      "ES2021"
+    ],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
@@ -25,13 +27,30 @@
     "sourceMap": true,
     "baseUrl": "./src",
     "paths": {
-      "@config/*": ["config/*"],
-      "@common/*": ["common/*"],
-      "@core/*": ["core/*"],
-      "@modules/*": ["modules/*"],
-      "@middleware/*": ["middleware/*"]
+      "@config/*": [
+        "config/*"
+      ],
+      "@common/*": [
+        "common/*"
+      ],
+      "@core/*": [
+        "core/*"
+      ],
+      "@modules/*": [
+        "modules/*"
+      ],
+      "@middleware/*": [
+        "middleware/*"
+      ]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
