--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,14 @@ PORT=5000
 API_PREFIX=/api/v1
 
 # Database
+# For local development
 DATABASE_URL="postgresql://username:password@localhost:5432/csm_db?schema=public"
+
+# For production (Render/Railway) with connection pooling
+# DATABASE_URL="postgresql://username:password@host:5432/csm_db?schema=public&connection_limit=5&pool_timeout=10&connect_timeout=10"
+
+# Optional: Direct URL for migrations (if using connection pooler)
+# DIRECT_URL="postgresql://username:password@host:5432/csm_db?schema=public"
 
 # Redis
 REDIS_HOST=localhost
