--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/main.js",
     "start:dev": "nodemon --exec ts-node src/main.ts",
+    "deploy": "npx prisma migrate deploy && npx prisma generate && node dist/main.js",
+    "postinstall": "npx prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:seed:orders": "ts-node prisma/seed-orders-customers.ts",
