--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "start": "node dist/main.js",
+    "start": "npx prisma migrate deploy && npx prisma generate && npm install && npm run build && node dist/main.js",
     "start:dev": "nodemon --exec ts-node src/main.ts",
-    "deploy": "npx prisma migrate deploy && npx prisma generate && node dist/main.js",
     "postinstall": "npx prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
