--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "start": "npx prisma migrate deploy && npx prisma generate && npm install && npm run build && node dist/main.js",
+    "start": "npx prisma migrate deploy && node dist/main.js",
     "start:dev": "nodemon --exec ts-node src/main.ts",
     "postinstall": "npx prisma generate",
     "prisma:generate": "prisma generate",
